force-app/main/default/objects/Agent_Performance__c/Agent_Performance__c.object-meta.xml
<CustomObject>
    <description>Agent performance metrics</description>
    <label>Agent Performance</label>
    <nameField>
        <label>Agent Performance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Agent Performance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>