force-app/main/default/objects/Agent_Performance__c/fields/Avg_Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Avg_Days_to_Close__c</fullName>
    <label>Avg Days to Close</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>1</scale>
</CustomField>