force-app/main/default/objects/Agent_Performance__c/fields/Avg_Premium_Per_Lead__c.field-meta.xml
<CustomField>
    <fullName>Avg_Premium_Per_Lead__c</fullName>
    <label>Avg Premium Per Lead</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>