force-app/main/default/objects/Agent_Performance__c/fields/Leads_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Leads_Assigned__c</fullName>
    <label>Leads Assigned</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>