force-app/main/default/objects/Agent_Performance__c/fields/Leads_Converted__c.field-meta.xml
<CustomField>
    <fullName>Leads_Converted__c</fullName>
    <label>Leads Converted</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>