force-app/main/default/objects/Agent_Performance__c/fields/Metric_Period__c.field-meta.xml
<CustomField>
    <fullName>Metric_Period__c</fullName>
    <label>Metric Period</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Monthly</fullName><default>true</default></value>
            <value><fullName>Quarterly</fullName><default>false</default></value>
            <value><fullName>YTD</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>