force-app/main/default/objects/Agent_Performance__c/fields/Total_Premium_Written__c.field-meta.xml
<CustomField>
    <fullName>Total_Premium_Written__c</fullName>
    <label>Total Premium Written</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>